--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	}
 	</style>
 	</header>
-	
+	<div id="center">
         <h1>
             Главная страница
         </h1>
@@ -112,7 +112,7 @@
         <img src = https://avatars.mds.yandex.net/i?id=9a0fd91f4c2ae27fa545b67abfee9dffdce4f693-9181395-images-thumbs&n=13 width="500" color ="red" year = "1980">
         
     </section>
-	
+	</div>
 
 	<table class = "tablic">
 		<tr class = chet>
